--- a/index.html
+++ b/index.html
@@ -1,215 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <script src=""></script>
-</head>
-
-<body>
-<section class="hero is-primary is-bold">
-  <div class="hero-body">
-    <div class="container">
-      <div class="columns is-vcentered">
-        <div class="column has-text-centered">
-          <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025</h1>
-          <h2 class="subtitle is-4">Registration Form</h2>
-        </div>
-      </div>
-    </div>
+<div style="text-align: center; padding: 30px; border: 3px solid #d9534f; background: linear-gradient(135deg, #f8f9fa 0%, #f2dede 100%); border-radius: 12px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; box-shadow: 0 4px 8px rgba(0,0,0,0.1); max-width: 600px; margin: 20px auto;">
+  <h2 style="color: #d9534f; font-size: 28px; margin-bottom: 15px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Registration Closed</h2>
+  <div style="width: 80px; height: 4px; background: #d9534f; margin: 0 auto 20px;"></div>
+  <p style="color: #555; font-size: 16px; line-height: 1.6; margin-bottom: 15px;">Thank you for your interest in the <span style="font-weight: 600; color: #333;">Moroccan Youth Athletic Festival</span>.</p>
+  <p style="color: #555; font-size: 16px; line-height: 1.6; margin-bottom: 15px;">Registration is now closed as we have reached the maximum number of participants for both the <strong style="color: #d9534f;">Relay Race</strong> and <strong style="color: #d9534f;">Soccer Tournament</strong>.</p>
+  <p style="color: #555; font-size: 16px; line-height: 1.6; margin-bottom: 20px;">We appreciate your enthusiasm and encourage you to join us next time. Best of luck!</p>
+  
+  <div style="margin-top: 25px; padding-top: 15px; border-top: 1px dashed #d9534f;">
+    <p style="color: #333; font-size: 18px; font-weight: 600; font-style: italic; margin: 0;">– The MASAR Team</p>
   </div>
-</section>
-
-<!-- Added notification about girls registration being closed -->
-<div class="container mt-4">
-  <div class="notification is-danger">
-    <button class="delete"></button>
-    <strong>Important Notice:</strong> Registration for girls' races has been closed as we've reached the maximum number of participants. Only boys' soccer registration remains available.
+  
+  <div style="margin-top: 20px;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="#d9534f" opacity="0.7">
+      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
+    </svg>
   </div>
 </div>
-
-<form id="form" class="container m-4 pl-4" method="POST">
-  <h2 class="title is-4 mt-5">Parent Information</h2>
-  <div class="field"><label class="label">Full Name</label><div class="control"><input class="input" type="text" name="Parent Full Name" required></div></div>
-  <div class="field">
-  <label class="label">Email</label>
-  <div class="control">
-    <input class="input" type="email" name="Parent Email" required>
-  </div>
-  <p class="help has-text-danger">
-    Please use an email address you can access - we'll send confirmation emails 
-    needed for check-in to this address.
-  </p>
-</div>
-  <div class="field"><label class="label">Phone Number</label><div class="control"><input class="input" type="tel" name="Parent Phone" required></div></div>
-
-  <h2 class="title is-4 mt-5">Participant Information</h2>
-  <div id="participants-container"></div>
-  <div class="field"><div class="control"><button class="button is-info" type="button" onclick="addParticipant()">Add Participant</button></div></div>
-
-  <h2 class="title is-4 mt-5">Waiver & Consent</h2>
-  <div class="field">
-    <div class="control">
-      <textarea class="textarea" readonly>
-I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release Moroccan Youth Athletic Festival, organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child's photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
-      </textarea>
-    </div>
-  </div>
-  <div class="field"><div class="control"><label class="checkbox"><input type="checkbox" name="Waiver Consent" required> I have read and agree to the above waiver.</label></div></div>
-
-  <div id="total-due" class="notification is-info" style="display:none; font-weight:bold; margin-top:20px;">Total Due: $0</div>
-  <div id="proceed-container" class="field mt-5"><div class="control"><button class="button is-warning" type="button" onclick="startPayPal()">Proceed to Payment</button></div></div>
-  <div id="paypal-button-container" style="display:none;" class="mt-4"></div>
-</form>
-
-<script>
-function updateTotalAmount() {
-  const participantCount = document.querySelectorAll('#participants-container .box').length;
-  const totalDueDiv = document.getElementById('total-due');
-  if (participantCount > 0) {
-    totalDueDiv.style.display = 'block';
-    totalDueDiv.textContent = `Total Due: $${participantCount * 20}`;
-  } else {
-    totalDueDiv.style.display = 'none';
-  }
-}
-
-function addParticipant() {
-  const container = document.getElementById('participants-container');
-  const id = `participant-${Date.now()}`;
-  const index = container.children.length;
-  container.insertAdjacentHTML('beforeend', `
-    <div class="box mt-4" id="${id}">
-      <div class="is-flex is-justify-content-space-between is-align-items-center mb-3">
-        <h3 class="title is-5">Participant ${index + 1}</h3>
-        <button type="button" class="delete" onclick="removeParticipant('${id}')"></button>
-      </div>
-      <div class="field"><label class="label">First Name</label><div class="control"><input class="input" type="text" name="Participant First Name[]" required></div></div>
-      <div class="field"><label class="label">Last Name</label><div class="control"><input class="input" type="text" name="Participant Last Name[]" required></div></div>
-      <div class="field"><label class="label">Date of Birth</label><div class="control"><input class="input" type="date" name="Participant DOB[]" required></div></div>
-      <div class="field">
-        <label class="label">Gender</label>
-        <div class="control">
-          <label class="radio"><input type="radio" name="Participant Gender[${index}]" value="boy" required checked> Boy (Soccer)</label>
-        </div>
-      </div>
-      <div class="field soccer-level" id="soccer-${id}">
-  <label class="label">Soccer Level</label>
-  <div class="control">
-    <div class="select">
-      <select name="Soccer Level[]">
-        <option value="recreational">Recreational</option>
-        <option value="travel">Travel</option>
-      </select>
-    </div>
-  </div>
-  <p class="help has-text-danger">
-    Recreational – For players who play mainly for fun and local competition.<br>
-    Travel – For competitive players who play in higher-level leagues and travel for games.
-  </p>
-</div>
-  `);
-  updateTotalAmount();
-}
-
-function removeParticipant(id) {
-  const box = document.getElementById(id);
-  if (box) {
-    box.remove();
-  }
-  updateTotalAmount();
-}
-
-function toggleSoccerLevel(participantId, show) {
-  const el = document.getElementById(`soccer-${participantId}`);
-  if (el) {
-    el.style.display = show ? 'block' : 'none';
-    const select = el.querySelector('select');
-    if (!show && select) {
-      select.value = "";
-    }
-  }
-}
-
-function startPayPal() {
-  const parentName = document.querySelector('input[name="Parent Full Name"]').value.trim();
-  const parentEmail = document.querySelector('input[name="Parent Email"]').value.trim();
-  const parentPhone = document.querySelector('input[name="Parent Phone"]').value.trim();
-  const waiverConsent = document.querySelector('input[name="Waiver Consent"]:checked');
-  const participantBoxes = document.querySelectorAll('#participants-container .box');
-
-  if (!parentName || !parentEmail || !parentPhone || !waiverConsent || participantBoxes.length === 0) {
-    alert("Please complete all Parent Information, add at least one Participant, and agree to Waiver.");
-    return;
-  }
-
-  for (let box of participantBoxes) {
-    const firstName = box.querySelector('input[name="Participant First Name[]"]').value.trim();
-    const lastName = box.querySelector('input[name="Participant Last Name[]"]').value.trim();
-    const dob = box.querySelector('input[name="Participant DOB[]"]').value.trim();
-    const genderSelected = box.querySelector('input[type="radio"]:checked');
-    if (!firstName || !lastName || !dob || !genderSelected) {
-      alert("Please fill out all fields for every participant.");
-      return;
-    }
-  }
-
-  document.getElementById('proceed-container').style.display = 'none';
-  document.getElementById('paypal-button-container').style.display = 'block';
-
-  paypal.Buttons({
-    createOrder: function(data, actions) {
-      const participantCount = participantBoxes.length;
-      const totalAmount = participantCount * 20;
-      return actions.order.create({purchase_units: [{amount: {value: totalAmount.toFixed(2)}}]});
-    },
-    onApprove: function(data, actions) {
-      return actions.order.capture().then(function(details) {
-        sendFormData();
-      });
-    }
-  }).render('#paypal-button-container');
-}
-
-function sendFormData() {
-  const form = document.getElementById('form');
-  const formData = new FormData(form);
-
-  // Fix: Manually add gender fields as array
-  const genderInputs = document.querySelectorAll('input[type="radio"][name^="Participant Gender"]:checked');
-  genderInputs.forEach(radio => {
-    formData.append("Participant Gender[]", radio.value);
-  });
-
-  const keyValuePairs = [];
-  for (let pair of formData.entries()) {
-    keyValuePairs.push(`${pair[0]}=${encodeURIComponent(pair[1])}`);
-  }
-  const formDataString = keyValuePairs.join("&");
-
-  fetch("https://script.google.com/macros/s/AKfycbxxtQnrbYjg06wBU30dmORSk3ef_bDZ-Qju5vaLJXx14vM80bNKFbsOo59GA_8do0Nw/exec", {
-    method: "POST",
-    body: formDataString,
-    headers: {"Content-Type": "text/plain;charset=utf-8"}
-  }).then(response => {
-    window.location.href = "thank-you.html";
-  }).catch(error => {
-    console.error('Form submit error:', error);
-    alert('There was a problem submitting your registration.');
-  });
-}
-
-// Add click handler for notification close button
-document.addEventListener('DOMContentLoaded', function() {
-  document.addEventListener('click', function(event) {
-    if (event.target.classList.contains('delete')) {
-      event.target.parentNode.style.display = 'none';
-    }
-  });
-});
-</script>
-
-</body>
-</html>
