--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
+  <title>Moroccan Youth Athletic Festival - Fall 2025 Registration</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <script src=""></script>
@@ -213,3 +213,4 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
